--- a/src/main/resources/static/board.html
+++ b/src/main/resources/static/board.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.dom.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/addons/p5.sound.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+        crossorigin="anonymous" />
+  <!-- ACA IBA EL CSS DE STATIC SIMPLE -->
+  <link href="/css/styles.css" th:href="@{/css/styles.css}"
+        rel="stylesheet" />
 </head>
 <body>
-<button onclick="limpiar();">Borrar</button>
-<button onclick="guardar();">Guardar</button>
-<button onclick="recuperar();">Restaurar</button>
-<script src="js/sketch.js"></script>
+<h1>Choose a name</h1>
+
+
+<legend><span class="number"><div>
+      <i class="fa fa-pencil" aria-hidden="true"></i>
+
+    </div></span> Board Nicolás Torres</legend>
+<label >Name:</label>
+<div>
+    <input type="text" id="userName" >
+    <button onclick="guardar();">register name</button>
+</div>
+
+<button onclick="limpiar();">Clean board</button>
+
+<div class="board" >
+    <legend><span class="number"><div>
+      <i class="fa fa-pencil" aria-hidden="true"></i>
+
+    </div></span> Board &darr;</legend>
+
+  <script src="js/sketch.js"></script>
+
+</div>
+
+
+
+
 
 </body>
 </html>
