--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div>Pagina pro</div>
+<div>ir a https://nicolasdrawboard.herokuapp.com/board.html</div>
 <hr />
 <div id="root"></div>
 <hr />
